overflow-x to avoid horizontal scrollbar

--- a/www/modules/summary/themes/ExtJS/style.css
+++ b/www/modules/summary/themes/ExtJS/style.css
@@ -18,6 +18,10 @@
 	background-image: url('images/note.png') !important;	
 }
 
+.x-portal .x-column-layout-ct{
+overflow-y:scroll !important;
+}
+
 .x-portal .x-panel-dd-spacer {
     margin-bottom:10px;
 }
